final-project/final-backend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final-backend
  labels:
    name: final-backend
