final-project/final-frontend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final-frontend
  labels:
    name: final-frontend
