final-project/final-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-main-svc
  namespace: final-frontend
spec:
  selector:
    app: main-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.20
---
apiVersion: v1
kind: Service
metadata:
  name: final-signup-svc
  namespace: final-frontend
spec:
  selector:
    app: signup-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.40
---
apiVersion: v1
kind: Service
metadata:
  name: final-login-svc
  namespace: final-frontend
spec:
  selector:
    app: login-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.60
---
apiVersion: v1
kind: Service
metadata:
  name: final-logout-svc
  namespace: final-frontend
spec:
  selector:
    app: logout-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.80
---
apiVersion: v1
kind: Service
metadata:
  name: final-order-svc
  namespace: final-frontend
spec:
  selector:
    app: order-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.100
---
apiVersion: v1
kind: Service
metadata:
  name: final-reservation-svc
  namespace: final-frontend
spec:
  selector:
    app: reservation-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.120
---
apiVersion: v1
kind: Service
metadata:
  name: final-reservationinfo-svc
  namespace: final-frontend
spec:
  selector:
    app: reservationinfo-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  clusterIP: 172.20.10.140
