final-project/final-tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: final-trd-tommain-svc
  namespace: final-backend
spec:
  selector:
    app: main-app
  type: ClusterIP
  clusterIP: 172.20.10.10
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: final-trd-tomsignup-svc
  namespace: final-backend
spec:
  selector:
    app: signup-app
  type: ClusterIP
  clusterIP: 172.20.10.30
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: final-trd-tomlogin-svc
  namespace: final-backend
spec:
  selector:
    app: login-app
  type: ClusterIP
  clusterIP: 172.20.10.50
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: final-trd-tomlogout-svc
  namespace: final-backend
spec:
  selector:
    app: logout-app
  type: ClusterIP
  clusterIP: 172.20.10.70
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: final-trd-tomorder-svc
  namespace: final-backend
spec:
  selector:
    app: order-app
  type: ClusterIP
  clusterIP: 172.20.10.90
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: final-trd-tomreservation-svc
  namespace: final-backend
spec:
  selector:
    app: reservation-app
  type: ClusterIP
  clusterIP: 172.20.10.110
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: final-trd-tomreservationinfo-svc
  namespace: final-backend
spec:
  selector:
    app: reservationinfo-app
  type: ClusterIP
  clusterIP: 172.20.10.130
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
