final-project/final-prd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-ingress-rule
  namespace: final-frontend
  annotations:
    kubernetes.io/ingress.class: alb #ALB 인그레스 컨트롤러 설치했다면 아마 디폴트로 이 이름일것임
    alb.ingress.kubernetes.io/scheme: internet-facing #퍼블릭
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS #이거 주의하셈. HTTP가 아니라 https로 박으셈. 내가 보기에 무한루프 리디렉션 버그로 보임
    alb.ingress.kubernetes.io/actions.response-404: '{"Type": "fixed-response", "FixedResponseConfig": {"ContentType":"text/plain", "StatusCode":"404", "MessageBody":"404 page not found"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:412381775968:certificate/b751752e-83b5-4750-9bd4-4a5e5d636a37
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: www.gitchang.store
      http:
        paths:
          - path: /index.jsp
            pathType: Prefix
            backend:
              service:
                name: final-main-svc
                port:
                  number: 80
          - path: /signup.jsp
            pathType: Prefix
            backend:
              service:
                name: final-signup-svc
                port:
                  number: 80
          - path: /login.jsp
            pathType: Prefix
            backend:
              service:
                name: final-login-svc
                port:
                  number: 80
          - path: /logout.jsp
            pathType: Prefix
            backend:
              service:
                name: final-logout-svc
                port:
                  number: 80
          - path: /order.jsp
            pathType: Prefix
            backend:
              service:
                name: final-order-svc
                port:
                  number: 80
          - path: /reservation.jsp
            pathType: Prefix
            backend:
              service:
                name: final-reservation-svc
                port:
                  number: 80
          - path: /reservation_lnfo.jsp
            pathType: Prefix
            backend:
              service:
                name: final-reservationinfo-svc
                port:
                  number: 80
